[gd_scene load_steps=6 format=3 uid="uid://dsyx7s2hb82i2"]

[ext_resource type="Script" path="res://Scripts/main_select_character.gd" id="1_btvq1"]
[ext_resource type="PackedScene" uid="uid://bhdsouc2va3bo" path="res://Scenes/p_b_seleccion_escene.tscn" id="2_nlbyo"]
[ext_resource type="Texture2D" uid="uid://ck50lqopf2v8e" path="res://resources/honguitoperfil.jpg" id="3_vpbb8"]
[ext_resource type="Texture2D" uid="uid://bbodcf7qgpumj" path="res://resources/antperfil.jpg" id="4_taakb"]
[ext_resource type="Texture2D" uid="uid://covrofpychbg5" path="res://resources/goblinp.jpg" id="5_02mnf"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_btvq1")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = 30.0
offset_right = 574.0
offset_bottom = -491.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.247059, 0.596078, 0.8, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = 7
theme_override_font_sizes/font_size = 90
text = "Select player 1"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -412.0
offset_top = 427.0
offset_right = 116.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.247059, 0.596078, 0.8, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = 7
theme_override_font_sizes/font_size = 90
text = "Ant"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 205.0
offset_top = 427.0
offset_right = 733.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.247059, 0.596078, 0.8, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = 7
theme_override_font_sizes/font_size = 90
text = "Goblin"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.0
offset_top = 425.0
offset_right = 430.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.247059, 0.596078, 0.8, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = 7
theme_override_font_sizes/font_size = 90
text = "Mushroom"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -108.0
offset_right = 264.0
offset_bottom = -31.0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="back" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Return"

[node name="ParallaxBackground" parent="." instance=ExtResource("2_nlbyo")]

[node name="defaultb" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.062
offset_left = 472.0
offset_top = 193.0
offset_right = 702.68
offset_bottom = 385.824
texture_normal = ExtResource("3_vpbb8")
ignore_texture_size = true
stretch_mode = 0

[node name="antb" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.062
offset_left = 164.0
offset_top = 193.0
offset_right = 390.68
offset_bottom = 385.824
texture_normal = ExtResource("4_taakb")
ignore_texture_size = true
stretch_mode = 0

[node name="goblin" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 203.0
offset_top = -129.0
offset_right = 466.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_02mnf")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="defaultb" to="." method="_on_defaultb_pressed"]
[connection signal="pressed" from="antb" to="." method="_on_antb_pressed"]
[connection signal="pressed" from="goblin" to="." method="_on_goblin_pressed"]
